2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Remove duplicate entries.

2005-09-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/EphyBrowser.cpp:

	Only listen for trusted events.

2005-09-04  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-09-04  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.8.0 ===

	* NEWS:
	* configure.ac:

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-debug.c:

	Only include execinfo.h if it exists.

2005-08-29  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* lib/ephy-debug.c: (trap_handler):

	Check for execinfo.h. Fixes bug #314776.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Simplify gecko version check.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix configure.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Remove unused variables.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.7.6 ===

	* NEWS:
	* src/Makefile.am:

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* src/window-commands.c: (window_cmd_help_about):

	Update credits.

2005-08-28  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Set default prefs for warn-on-mixed-security pages. Part of bug
	#309088.

2005-08-28  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-history.c: (ephy_history_class_init),
	(internal_get_host), (ephy_history_get_host),
	(ephy_history_add_host), (ephy_history_add_page), (impl_add_page):
	* embed/ephy-history.h:
	* lib/ephy-marshal.list:

	Add an "add-page" signal to the EphyHistory object that can be
	used to block urls from appearing in the history. 

	Also make the ephy_history_get_host() function not create
	the EphyNode if it doesn't already exist.
