@@ -1,5 +1,11 @@
 2005-09-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/EphyUtils.cpp:
+
+	Mozilla printing code is braindead. Bug #163255.
+
+2005-09-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/languages.h:
 
 	Remove duplicate entries.
